--- a/estilos.css
+++ b/estilos.css
@@ -106,15 +106,32 @@ body{
     padding: 10px 10px
     }
 
-
-.caja{
-    width: 150px;
-    height: 150px;
-    border: 4px solid black;
-    background-color: white;
-    margin: 15px;
-    float: left;
-    text-align: center;
+.Tarjetas{
+    display: flex;
+    justify-content: center;
 }
 
+.Tarjeta-1{
+    width: 300px;
+    height: 300px;
+}
+
+.Tarjeta-1 img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50PX;
+    margin-top: 60px;
+}
+
+.Tarjeta-2{
+    width: 300px;
+    height: 300px;
+}
+
+.Tarjeta-2 img{
+    width: 300px;
+    height: 300px;
+    border-radius: 50PX;
+    margin-top: 85px;
+}
 
