--- a/estilos.css
+++ b/estilos.css
@@ -135,15 +135,26 @@ body{
     margin-top: 85px;
 }
 
+/*Lista*/
+
 .Lista{
     display: flex;
     justify-content: center;
+    margin: 200px;
 }
 
 .Listas{
     width: 300px;
     height: 300px;
     list-style: none;
+    margin: 20px;
+}
+
+a{
+    list-style: none;
+    font-size: 35px;
+    color:black;
+    font-family: 'Tangerine', cursive;
 }
 
 .Listas img{
